--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "git add"
     ]
   },
-  "author": "Fullstack Academy of Code",
+  "author": "Ian Gallagher",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
